<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>org.openjfx</groupId>
    <artifactId>gradefx</artifactId>
    <version>0.9.7</version>
    <packaging>jar</packaging>

    <name>GradeFX</name>

    <properties>
		<project.vendor>Fabian Kaschta</project.vendor>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>24</java.version>
        <javafx.version>24</javafx.version>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <javafx.plugin.version>0.0.8</javafx.plugin.version>
        <jpackage.plugin.version>1.6.6</jpackage.plugin.version>
        <module.path>${project.groupId}.${project.artifactId}</module.path>
        <main.class>${module.path}.GradeFXMain</main.class>
    </properties>
    
	<repositories>
		<repository>
			<id>github</id>
			<url>https://maven.pkg.github.com/fabiankaschta/KAFXBase</url>
		</repository>
	</repositories>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>kafx</artifactId>
			<version>0.9.7</version>
		</dependency>
		<!--
		<dependency>
			<groupId>org.apache.pdfbox</groupId>
			<artifactId>pdfbox</artifactId>
			<version>3.0.5</version>
		</dependency>
		-->
    </dependencies>

    <build>

        <plugins>
            <!-- javafx:run, javafx:jlink -->
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>${javafx.plugin.version}</version>
                <configuration>
                    <mainClass>${project.groupId}.${project.artifactId}/${main.class}</mainClass>
                </configuration>
            </plugin>
            <!-- jpackage -->
			<plugin>
				<groupId>org.panteleyev</groupId>
				<artifactId>jpackage-maven-plugin</artifactId>
				<version>${jpackage.plugin.version}</version>

				<configuration>
					<name>${project.name}</name>
					<appVersion>${project.version}</appVersion>
					<vendor>${project.vendor}</vendor>
					<runtimeImage>target/image</runtimeImage>
					<module>${module.path}/${main.class}</module>
					<modulePaths>
						<modulePath>target</modulePath>
					</modulePaths>
					<destination>target/dist</destination>
					<javaOptions>
						<option>--enable-preview</option>
						<option>-Dfile.encoding=${project.build.sourceEncoding}</option>
					</javaOptions>
				</configuration>
			</plugin>

        </plugins>
    </build>
	
    <profiles>
        <profile>
            <id>win</id>
            <activation>
                <os>
                    <family>windows</family>
                </os>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.panteleyev</groupId>
                        <artifactId>jpackage-maven-plugin</artifactId>
                        <version>${jpackage.plugin.version}</version>
                        <configuration>
                            <icon>src/main/resources/org/openjfx/gradefx/img/icon.ico</icon>
                            <winMenu>true</winMenu>
                            <winDirChooser>true</winDirChooser>
                            <winShortcut>true</winShortcut>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>mac</id>
            <activation>
                <os>
                    <family>mac</family>
                </os>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.panteleyev</groupId>
                        <artifactId>jpackage-maven-plugin</artifactId>
                        <version>${jpackage.plugin.version}</version>
                        <configuration>
                            <icon>src/main/resources/org/openjfx/gradefx/img/icon.png</icon>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>unix</id>
            <activation>
                <os>
                    <family>unix</family>
                </os>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.panteleyev</groupId>
                        <artifactId>jpackage-maven-plugin</artifactId>
                        <version>${jpackage.plugin.version}</version>
                        <configuration>
                            <!--<type>APP_IMAGE</type>-->
                            <icon>src/main/resources/org/openjfx/gradefx/img/icon.png</icon>
                            <linuxShortcut>true</linuxShortcut>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    
</project>